# gumka

./: .gitignore  README.md  desktop.ini  pyproject.toml
.github/workflows/: publish.yml
example_rules/: DesignBuilder.toml
src/gumka/: cleaner.py  config.py  scanner.py  scheduler.py
src/gumka/cli/: _common.py  clean.py  main.py  rules.py  scan.py  schedules.py  shell.py  trash.py
src/gumka/rules/: merger.py  parser.py  validator.py
tests/: test_cleaner.py  test_rules.py  test_scanner.py
