[project]
name = "gumka"
version = "0.2.1"
description = "Rule-based disk cleaner for Windows"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "typer",
    "send2trash",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[project.urls]
Source = "https://github.com/Tokarzewski/gumka"

[project.scripts]
gumka = "gumka.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gumka"]

[tool.hatch.build.targets.wheel.force-include]
"resources" = "gumka/resources"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
